--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Garage Bin</title>
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <header>
@@ -10,6 +10,9 @@
       Garage Bin
     </h1>
   </header>
+  <div id='garage-item-container'>
+  </div>
+  <button>Open/Close</button>
 <script src='./js/jquery.min.js'></script>
 <script type="text/javascript" src="./js/script.js"></script>
 </body>
