--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,14 @@
       Garage Bin
     </h1>
   </header>
+
   <div id='garage-item-container'>
+    <div id='garage-door'>
+      <img class='garage-door-img' src='./assets/garage-door.jpg' alt='garage-door-picture'>
+    </div>
+    <button id='btn-garage'>Open/Close</button>
   </div>
-  <button>Open/Close</button>
+
 <script src='./js/jquery.min.js'></script>
 <script type="text/javascript" src="./js/script.js"></script>
 </body>
