appending items on frontend

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
       <input type='text' placeholder='Reason it lingers' id='reason-input'>
       <span>Cleanliness</span>
       <select class='dropdown'>
-        <option>Sparkling</option>
-        <option>Dusty</option>
-        <option>Rancid</option>
+        <option>sparkling</option>
+        <option>dusty</option>
+        <option>rancid</option>
       </select>
       <button class='btn-add'>Submit</button>
     </div>
