--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,14 @@
   </div>
   <div id='container-and-form'>
     <div id='garage-item-container'>
+
     </div>
     <div id='add-item' class='hidden'>
+      <div>Total items in garage: <span class='garage-count-total'></span></div>
+      <div>Sparkling items: <span class='sparkling-count-total'></span></div>
+      <div>Dusty items: <span class='dusty-count-total'></span></div>
+      <div>Rancid items: <span class='rancid-count-total'></span></div>
+
       <h2>Add an item</h2>
       <input type='text' placeholder='Item Name' id='name-input'>
       <input type='text' placeholder='Reason it lingers' id='reason-input'>
