--- a/public/index.html
+++ b/public/index.html
@@ -9,21 +9,22 @@
     <h1>
       Garage Bin
     </h1>
+      <button id='btn-garage'>Open/Close</button>
   </header>
   <div id='garage-door'>
     <img class='garage-door-img' src='./assets/garage-door.jpg' alt='garage-door-picture'>
   </div>
   <div id='container-and-form'>
     <div id='garage-item-container'>
-
     </div>
     <div id='add-item' class='hidden'>
+      <h2>Current Counts</h2>
       <div>Total items in garage: <span class='garage-count-total'></span></div>
       <div>Sparkling items: <span class='sparkling-count-total'></span></div>
       <div>Dusty items: <span class='dusty-count-total'></span></div>
       <div>Rancid items: <span class='rancid-count-total'></span></div>
 
-      <h2>Add an item</h2>
+      <h2 class='add-item-title'>Add an item</h2>
       <input type='text' placeholder='Item Name' id='name-input'>
       <input type='text' placeholder='Reason it lingers' id='reason-input'>
       <span>Cleanliness</span>
@@ -35,7 +36,7 @@
       <button class='btn-add'>Submit</button>
     </div>
   </div>
-  <button id='btn-garage'>Open/Close</button>
+
 
 <script src='./js/jquery.min.js'></script>
 <script type="text/javascript" src="./js/script.js"></script>
